--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meme Maker</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles2.css" />
   </head>
   <body> <div class="color-options">
     <input type="color" id="color" />
